Moving vim-peepopen to Pathogen

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/bash-support.vim"]
 	path = bundle/bash-support.vim
 	url = https://github.com/gregwork/bash-support.vim.git
+[submodule "bundle/vim-peepopen"]
+	path = bundle/vim-peepopen
+	url = https://github.com/shemerey/vim-peepopen.git
