--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "bundle/puppet-syntax-vim"]
 	path = bundle/puppet-syntax-vim
 	url = https://github.com/puppetlabs/puppet-syntax-vim.git
+[submodule "bundle/ipqtmacvim"]
+	path = bundle/ipqtmacvim
+	url = https://github.com/jkitzes/ipyqtmacvim.git
