--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "bundle/OnSyntaxChange"]
 	path = bundle/OnSyntaxChange
 	url = https://github.com/vim-scripts/OnSyntaxChange.git
+[submodule "bundle/vim-detailed"]
+	path = bundle/vim-detailed
+	url = https://github.com/rking/vim-detailed.git
